# EDL_implementation

./: .gitignore  CMakeLists.txt  README.md  ToDo  install.sh
libraries/: CMakeLists.txt
libraries/Database/: Database_sqlite.cpp
libraries/Specific/Base/: WIN_base.cpp  WIN_base.h
libraries/Specific/Function/: fct_chrono.h
libraries/Specific/Struct/: struct_object.h  struct_set.h
libraries/Window/: Window.h
src/: CMakeLists.txt  Node.cpp  Node.h  ToDo  common.h  config.h  main.cpp
src/Application/: Loop.cpp  Loop.h  Param.h
src/Core/: Loop.cpp  Loop.h  UI_loop.cpp  UI_loop.h
src/Data/: Data.cpp  Data.h  Node_data.cpp  Node_data.h  Param_data.h  struct_cloud.h  struct_data.h  struct_set.cpp  struct_set.h
src/Data/Glyph/: Element.cpp  Element.h  Glyphs.cpp  Glyphs.h
src/Data/Mesh/: Mesh.cpp  Mesh.h
src/Data/Scene/: Control.cpp  Control.h  Database.cpp  Database.h  Scene.cpp  Scene.h
src/Data/Struct/: struct_cloud.cpp  struct_cloud.h  struct_data.h  struct_data_file.h  struct_glyph.h  struct_mesh.h  struct_object.cpp  struct_object.h  struct_set.cpp  struct_set.h
src/Element/: CMakeLists.txt
src/Element/Database/: Database_sqlite.cpp  Database_sqlite.h
src/Element/Window/: Dimension.cpp  Dimension.h  Window.cpp  Window.h  Window_manager.cpp  Window_manager.h  struct_tab.cpp  struct_tab.h
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Node.cpp  Node.h  Node_engine.cpp  Node_engine.h  Param_engine.h  common.h  main.cpp
src/Engine/Camera/: Camera.cpp  Camera.h  struct_cam.cpp  struct_cam.h  struct_camera.cpp  struct_camera.h
src/Engine/Common/: struct_glyph.h  struct_object.cpp  struct_set.h
src/Engine/Core/: Control.cpp  Control.h  Core_common.h  Core_loop.cpp  Core_loop.h  Core_node.h  Core_param.h  Dimension.cpp  Dimension.h  Engine.cpp  Engine.h  Engine_vulkan.cpp  Engine_vulkan.h  Engine_window.cpp  Engine_window.h  GUI.cpp  GUI.h  Node_core.cpp  Node_core.h  Node_engine.cpp  Node_engine.h  Param_core.h  Scene.cpp  Scene.h
src/Engine/Data/: Data_common.h  Data_node.cpp  Data_node.h  Data_param.h  Node_data.cpp  Node_data.h  Param_data.h
src/Engine/Dimension/: Dimension.cpp  Dimension.h  struct_tab.cpp  struct_tab.h
src/Engine/GPU/: GPU_data.cpp  GPU_data.h
src/Engine/GUI/: GUI_common.h  GUI_node.cpp  GUI_node.h  GUI_param.h  Node_gui.cpp  Node_gui.h
src/Engine/Load/: Node_load.cpp  Node_load.h
src/Engine/Loop/: Loop.cpp  Loop.h
src/Engine/Operation/: Node_operation.cpp  Node_operation.h  common.h
src/Engine/Render/: Core_node.cpp  Render_common.h  Render_node.cpp  Render_node.h  Render_param.h
src/Engine/Shader/: Shader.cpp  Shader.h  compile.sh
src/Engine/Vulkan/: Engine.cpp  Engine.h  Engine_vulkan.cpp  Engine_vulkan.h  Param_vulkan.h  VK_buffer.cpp  VK_buffer.h  VK_class.cpp  VK_class.h  VK_command.cpp  VK_command.h  VK_depth.cpp  VK_depth.h  VK_descriptor.cpp  VK_descriptor.h  VK_device.cpp  VK_device.h  VK_drawing.cpp  VK_drawing.h  VK_engine.cpp  VK_engine.h  VK_framebuffer.cpp  VK_framebuffer.h  VK_instance.cpp  VK_instance.h  VK_param.h  VK_parameter.h  VK_pipeline.cpp  VK_pipeline.h  VK_renderpass.cpp  VK_renderpass.h  VK_struct.h  VK_swapchain.cpp  VK_swapchain.h  VK_synchronization.cpp  VK_synchronization.h  VK_texture.cpp  VK_texture.h  VK_uniform.cpp  VK_uniform.h  (+2 more)
src/GUI/: CMakeLists.txt  GUI.cpp  GUI.h  GUI_control.cpp  GUI_control.h  GUI_left_panel.cpp  GUI_left_panel.h  GUI_node.cpp  GUI_node.h  GUI_param.h  Node_gui.cpp  Node_gui.h  Param_gui.h  UI_loop.cpp  UI_loop.h
src/GUI/Control/: Control.cpp  Control.h  GUI_control.cpp  GUI_control.h  GUI_option.h  GUI_profiling.cpp  GUI_profiling.h  GUI_time.cpp  GUI_time.h
src/GUI/Data/: GUI_data.cpp  GUI_data.h  GUI_dialog.h  GUI_filemanager.cpp
src/GUI/Editor/: GUI_editor_hexa.cpp  GUI_editor_hexa.h  GUI_editor_node.cpp  GUI_editor_node.h  GUI_editor_text.cpp  GUI_editor_text.h
src/GUI/Engine/: GUI_device.cpp  GUI_device.h  GUI_engine.cpp  GUI_engine.h  GUI_option.cpp  GUI_shader.cpp  GUI_shader.h  GUI_time.cpp
src/GUI/Menu/: GUI_Initialization.cpp  GUI_Initialization.h  GUI_init.cpp  GUI_init.h  GUI_menubar.cpp  GUI_menubar.h  GUI_option.cpp  GUI_option.h
src/GUI/Module/: GUI_filemanager.cpp  GUI_filemanager.h  GUI_windows.cpp  GUI_windows.h
src/GUI/Operation/: GUI_control.cpp  GUI_control.h  GUI_option.cpp  GUI_option.h  GUI_shader.cpp  GUI_shader.h
src/GUI/Panel/: BASE_panel.cpp  BASE_panel.h  GUI_database.cpp  GUI_database.h  GUI_docker.cpp  GUI_docker.h  GUI_editor.cpp  GUI_editor.h  GUI_editor_hexa.cpp  GUI_editor_hexa.h  GUI_editor_text.h  GUI_engine.cpp  GUI_engine.h  GUI_filemanager.cpp  GUI_filemanager.h  GUI_left_panel.cpp  GUI_left_panel.h  GUI_menubar.cpp  GUI_menubar.h  GUI_node.cpp  GUI_node.h  GUI_object.cpp  GUI_object.h  GUI_panel.cpp  GUI_panel.h  GUI_windows.cpp  GUI_windows.h  Panel.h  WIN_camera.cpp  WIN_camera.h  WIN_object.cpp  WIN_object.h  WIN_set.cpp  WIN_set.h  node.h
src/GUI/Style/: GUI_indicator.h  GUI_style.cpp  GUI_style.h  GUI_toggle.h
src/GUI/Vulkan/: UI_main.h  UI_vulkan.h
src/GUI/Window/: GUI_windows.cpp  GUI_windows.h  WIN_base.cpp  WIN_base.h  WIN_camera.cpp  WIN_camera.h  WIN_data.cpp  WIN_data.h  WIN_object.cpp  WIN_object.h  WIN_set.cpp  WIN_set.h
src/GUI/Windows/: WIN_base.cpp  WIN_base.h  WIN_camera.cpp  WIN_camera.h
src/Interface/Control/: Control.cpp  GUI_control.cpp
src/Interface/Data/: GUI_data.cpp  GUI_dialog.cpp
src/Interface/Menu/: GUI_menubar.cpp  GUI_option.cpp
src/Interface/Panel/: GUI_database.cpp  GUI_object.cpp  GUI_object.h  GUI_panel.cpp
src/Interface/Style/: GUI_indicator.h
src/Interface/Window/: WIN_camera.cpp  WIN_set.cpp  WIN_set.h
src/Load/: Loader.cpp  Node_load.cpp  Node_load.h
src/Load/Format/: File_obj.cpp  File_obj.h  file_OBJ.cpp  file_OBJ.h
src/Load/Processing/: Format.cpp  Format.h  Loader.cpp  Loader.h
src/Loader/: Loader.cpp  Loader.h
src/Operation/: Node_operation.cpp  Node_operation.h
src/Operation/Color/: Color.cpp  Colormap.cpp  Heatmap.cpp
src/Operation/Transformation/: Attribut.cpp  (+3 more)
src/UI/: UI_loop.cpp  UI_loop.h  UI_main.h
(+882 files in other folders)
